--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:padding="20dp"
+        android:padding="@dimen/_18sdp"
         >
 
         <ImageView
@@ -27,9 +27,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mening kunim"
-            android:textSize="22dp"
+            android:textSize="@dimen/_19sdp"
             android:layout_weight="1"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginHorizontal="@dimen/_18sdp"
             />
 
         <ImageView
@@ -43,7 +43,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:padding="10dp"
+        android:padding="@dimen/_8sdp"
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
@@ -54,17 +54,17 @@
             android:hint="Nomi"
             android:background="@drawable/bac_1"
             android:shadowColor="#000"
-            android:layout_marginVertical="5dp"
+            android:layout_marginVertical="@dimen/_3sdp"
             android:textStyle="bold"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:padding="16dp"
-        android:layout_marginHorizontal="10dp"
+        android:padding="@dimen/_13sdp"
+        android:layout_marginHorizontal="@dimen/_8sdp"
         android:background="@drawable/bac_1"
-        android:layout_marginVertical="5dp"
+        android:layout_marginVertical="@dimen/_3sdp"
         android:gravity="center_vertical"
         android:layout_height="wrap_content">
         <ImageView
@@ -80,8 +80,8 @@
             android:layout_height="wrap_content"
             android:text="Oxirgi muddat"
             android:layout_weight="1"
-            android:textSize="16dp"
-            android:layout_marginHorizontal="10dp"
+            android:textSize="@dimen/_13sdp"
+            android:layout_marginHorizontal="@dimen/_8sdp"
             />
 
         <ImageView
@@ -96,28 +96,28 @@
         android:id="@+id/holat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="10dp"
-        android:paddingVertical="17dp"
-        android:layout_marginHorizontal="10dp"
+        android:paddingHorizontal="@dimen/_8sdp"
+        android:paddingVertical="@dimen/_14sdp"
+        android:layout_marginHorizontal="@dimen/_8sdp"
         android:background="@drawable/bac_1"
-        android:layout_marginVertical="12dp"
+        android:layout_marginVertical="@dimen/_10sdp"
         />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:paddingHorizontal="10dp"
+        android:paddingHorizontal="@dimen/_8sdp"
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edt_description"
             android:layout_width="match_parent"
-            android:layout_height="155dp"
+            android:layout_height="@dimen/_145sdp"
             android:hint="Izoh"
             android:gravity="top"
             android:background="@drawable/bac_1"
             android:shadowColor="#000"
-            android:layout_marginVertical="5dp"
+            android:layout_marginVertical="@dimen/_3sdp"
             android:textStyle="bold"
             />
     </com.google.android.material.textfield.TextInputLayout>
